--- a/config.yml.example
+++ b/config.yml.example
@@ -1,12 +1,12 @@
 # GitLab user. git by default
-user: git
+user: addie
 
 # Url to gitlab instance. Used for api calls. Should end with a slash.
 # Default: http://localhost:8080/
 # You only have to change the default if you have configured Unicorn
 # to listen on a custom port, or if you have configured Unicorn to
 # only listen on a Unix domain socket.
-gitlab_url: "http://localhost:8080/"
+gitlab_url: "http://localhost:3000/"
 
 # See installation.md#using-https for additional HTTPS configuration details.
 http_settings:
@@ -20,10 +20,10 @@ http_settings:
 # Give the canonicalized absolute pathname,
 # REPOS_PATH MUST NOT CONTAIN ANY SYMLINK!!!
 # Check twice that none of the components is a symlink, including "/home".
-repos_path: "/home/git/repositories"
+repos_path: "/home/addie/GlitterGallery/public/data/repos"
 
 # File used as authorized_keys for gitlab user
-auth_file: "/home/git/.ssh/authorized_keys"
+auth_file: "/home/addie/.ssh/authorized_keys"
 
 # File that contains the secret key for verifying access to GitLab.
 # Default is .gitlab_shell_secret in the root directory.
